--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Jan 20 10:22:51 MSK 2025
-sdk.dir=/Users/boukreev/Library/Android/sdk
+#Fri Feb 14 16:25:37 MSK 2025
+sdk.dir=D\:\\Android\\SDK
